fixed fonts, text area overflows and scrollTop on different transition display

--- a/src/assets/scss/components/02_molecules/gameSelection.scss
+++ b/src/assets/scss/components/02_molecules/gameSelection.scss
@@ -11,7 +11,10 @@
             display: table-cell;
             vertical-align: middle;
             width: 70%;
-            font-weight: normal;
+
+            h1 {
+                font-weight: normal;
+            }
         }
 
         .supervise-game {
@@ -32,14 +35,26 @@
 
     .class-games {
         margin-bottom: 60px;
+
+        h5 {
+            font-weight: normal;
+        }
     }
 
     .open-games {
         margin-bottom: 60px;
+
+        h5 {
+            font-weight: normal;
+        }
     }
 
     .finished-games {
         margin-bottom: 30px;
+
+        h5 {
+            font-weight: normal;
+        }
     }
 
     .delete-account {
