--- a/src/assets/scss/components/02_molecules/pageComponents.scss
+++ b/src/assets/scss/components/02_molecules/pageComponents.scss
@@ -57,8 +57,7 @@
                     min-height: 64px;
                     padding: 0 10px;
                     resize: none;
-                    overflow: hidden;
-                    overflow-y: scroll;
+                    overflow-y: hidden;
                     color: #2F3133;
                     font-size: 17px;
                     line-height: 32px;
