--- a/src/assets/scss/components/03_organisms/mailContainer.scss
+++ b/src/assets/scss/components/03_organisms/mailContainer.scss
@@ -191,6 +191,7 @@
       margin-top: 50px;
       margin-bottom: 50px;
       resize: none;
+      overflow-y: hidden;
     }
     p {
       a {
