--- a/src/assets/scss/components/03_organisms/notebookContainer.scss
+++ b/src/assets/scss/components/03_organisms/notebookContainer.scss
@@ -311,10 +311,13 @@ $chapterHeight: 80px;
         font-size: 20px;
         line-height: 32px;
         letter-spacing: 0.2px;
+        overflow-y: hidden;
         background-image: -moz-linear-gradient(top , transparent, transparent 31px,#E7EFF8 0px);
         background-image: -webkit-linear-gradient(top , transparent, transparent 31px,#E7EFF8 0px);
         -webkit-background-size: 100% 32px;
         background-size: 100% 32px;
+
+        transition: all 0.3s;
     }
 
     .typing {
